--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://github.com/ndahiro6/ndahiro6.github.io/tree/main/Sports%20Analytics" class="button">View Projects</a></li>
+										<li><a href="https://github.com/ndahiro6/MyRepository/tree/main/Sports%20Analytics" class="button">View Projects</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -107,7 +107,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://github.com/ndahiro6/ndahiro6.github.io/tree/main/Sports%20Analytics" class="button">View Project</a></li>
+										<li><a href="https://github.com/ndahiro6/MyRepository/tree/main/Sports%20Analytics" class="button">View Project</a></li>
 									</ul>
 								</footer>
 							</section>
