--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://github.com/ndahiro6/MyRepository/tree/main/Sports%20Analytics" class="button">View Project</a></li>
+										<li><a href="https://github.com/ndahiro6/MyRepository/blob/main/Stats%20Analysis%20w%20Python/Final%20Exam%20Part%201.ipynb" class="button">View Project</a></li>
 									</ul>
 								</footer>
 							</section>
