--- a/index.html
+++ b/index.html
@@ -65,27 +65,38 @@
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Pose Detection</h3>
-										<p> In this project I use MediaPipe Pose and YOLOV7 to identify and tracks limbs of a lacrosse draw taker in 
-										3D space.</p>
+										<p>
+											In this project I use MediaPipe Pose and YOLOV7 to identify and tracks limbs of a lacrosse draw taker in
+											3D space.
+										</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Agent Based Draw Simulation</h3>
-										<p> With clear understanding of what basic rules dictate the outcomes of the draw, I constructed a model
-										that helps in predicting the likelihood of various outcomes given certain starting positions.</p>
+										<p>
+											With clear understanding of what basic rules dictate the outcomes of the draw, I constructed a model
+											that helps in predicting the likelihood of various outcomes given certain starting positions.
+										</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Hudl Sportscode Output Window</h3>
-										<p>As a student manager for Blue Jays WLax, my day to day tasks involves video analytics through Sportscode app. I 
-										created one output window that has both player, draw and 8m stats. </p>
+										<p>
+											As a student manager for Blue Jays WLax, my day to day tasks involves video analytics through Sportscode app. I
+											created one output window that has both player, draw and 8m stats.
+										</p>
 									</li>
 								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="https://github.com/ndahiro6/MyRepository/tree/main/Sports%20Analytics" class="button">View Projects</a></li>
-									</ul>
-								</footer>
+								<video width="320" height="240" controls>
+									<source src="vid1.mp4" type="video/mp4">
+									
+								</video>
+
+									<footer class="major">
+										<ul class="actions special">
+											<li><a href="https://github.com/ndahiro6/MyRepository/tree/main/Sports%20Analytics" class="button">View Projects</a></li>
+										</ul>
+									</footer>
 							</section>
 
 						<!-- Second Section -->
