--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									</li>
 								</ul>
 								<video width="320" height="240" controls>
-									<source src="vid1.mp4" type="video/mp4">
+									<source src="videos/myvid.mp4" type="video/mp4">
 									
 								</video>
 
