--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 									<span class="icon major style3 fa-copy"></span>
 									<h3>Agent Based Draw Simulation</h3>
 									<p>
-										With clear understanding of what basic rules dictate the outcomes of the draw, I constructed a model
-										that helps in predicting the likelihood of various outcomes given certain starting positions.
+										With clear understanding of the basic movements and positioning of both draw taker and circle players, 
+										I constructed a simulation that uses re-inforcement learning to predict the easiest way to win a draw.
 									</p>
 								</li>
 								<li>
