--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 										<h2>A little bit about me...</h2>
 									</header>
 									<p>
-										I am senior at the Johns Hopkins University in the department of
-										Chemical & Biomolecular Engineering. My undergraduate research focuses on
-										using Applied Maths & Stats to interpret data collected through computer vision.
+										I am a sports enthusiast who earned a Bachelor’s degree at Johns Hopkins University majoring in Chemical & Biomolecular Engineering. 
+										I also minored in Applied Mathematics & Statistics with a focus area on Data Science. 
+										My undergraduate research experience was on using Python Open CV to track the position of lacrosse players on the field.
 									</p>
 									<ul class="actions">
 									</ul>
@@ -74,19 +74,19 @@
 
 								</li>
 								<li>
-									<span class="icon major style3 fa-copy"></span>
-									<h3>Agent Based Draw Simulation</h3>
+									<span class="icon solid major style1 fa-code"></span>
+									<h3>Player Position Tracking</h3>
 									<p>
-										With clear understanding of the basic movements and positioning of both draw taker and circle players, 
-										I constructed a simulation that uses re-inforcement learning to predict the easiest way to win a draw.
+										Used YOLOV7 to detect and track position of lacrosse players on the field as a function of time.
 									</p>
+
 								</li>
 								<li>
+									
 									<span class="icon major style5 fa-gem"></span>
-									<h3>Hudl Sportscode Output Window</h3>
+									<h3>Linear Regression with Bayesian Statistics</h3>
 									<p>
-										As a student manager for Blue Jays WLax, my day to day tasks involves video analytics through Sportscode app. I
-										created one output window that has both player, draw and 8m stats.
+									Made predictive stats through Bayesian linear regression that highlighted turnovers to have most impact on chances of winning for a D1 Women's Lacrosse team.
 									</p>
 								</li>
 							</ul>
@@ -99,7 +99,7 @@
 								</li>
 
 								<li>
-									<img src="images/comingsoon.png" alt="">
+									<img src="images/player_detection.png" alt="">
 
 								</li>
 								<li>
@@ -123,6 +123,14 @@
 								<h2>Data Science</h2>
 							</header>
 							<ul class="features">
+								<li>
+									<span class="icon major style3 fa-copy"></span>
+									<h3>Agent Based Draw Simulation</h3>
+									<p>
+										With clear understanding of the basic movements and positioning of both draw taker and circle players, 
+										I constructed a simulation that uses re-inforcement learning to predict the easiest way to win a draw.
+									</p>
+								</li>
 								<li>
 									<span class="icon solid major style3 fa-code"></span>
 									<h3>Parameter Inference</h3>
