--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								</li>
 
 								<li>
-									<img src="images/player_detection.png" alt="">
+									<img src="images/player_detection.png" width="320" height="240" alt="">
 
 								</li>
 								<li>
