moved stuff around

--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
 							<ul class="features">
 								<li>
 									<span class="icon major style3 fa-copy"></span>
-									<h3>Agent Based Draw Simulation</h3>
+									<h3>Reinforcement Learing</h3>
 									<p>
-										With clear understanding of the basic movements and positioning of both draw taker and circle players, 
-										I constructed a simulation that uses re-inforcement learning to predict the easiest way to win a draw.
+										Here I used MCMC to find an optimum policy for solving a 4 by 4 grid.
 									</p>
 								</li>
 								<li>
@@ -144,6 +143,7 @@
 							</ul>
 							<footer class="major">
 								<ul class="actions special">
+									<li><a href="https://github.com/ndahiro6/MyRepository/tree/main/Data%20Science" class="button">View Project</a></li>	
 									<li><a href="https://github.com/ndahiro6/MyRepository/blob/main/Stats%20Analysis%20w%20Python/Final%20Exam%20Part%201.ipynb" class="button">View Project</a></li>
 								</ul>
 							</footer>
