made some changes

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 								</li>
 
 								<li>
-									<img src="images/player_detection.png" width="320" height="240" alt="">
+									<img src="images/player_detection.png" width="320" height="220" alt="">
 
 								</li>
 								<li>
-									<img src="images/comingsoon.png" alt="">
+									<img src="images/pairwise_plot.png" width="320" height="220" alt="">
 
 								</li>
 							</footer>
@@ -150,13 +150,7 @@
 						</section>
 
 
-						<!-- Third Section -->
-						<section id="third" class="main special">
-							<header class="major">
-								<h2>Blog</h2>
-							</header>
-							
-						</section>
+						
 
 					</div>
 
