changed email address

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 								<dt>Address</dt>
 								<dd>4 East 32nd St&bull; Baltimore, MD 21218 &bull; USA</dd>
 								<dt>Email</dt>
-								<dd>sinezan1@jh.edu</dd>
+								<dd>inezastella6@gmail.coom</dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="https://github.com/ndahiro6/ndahiro6.github.io/tree/main" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
